# TestFFmpeg

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/flyscale/testforffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: com_flyscale_testforffmpeg_NativeAPI.h
app/src/main/java/com/flyscale/testforffmpeg/: MainActivity.java  NativeAPI.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/flyscale/testforffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
